add some comments

--- a/VAE_Example_Posters.ipynb
+++ b/VAE_Example_Posters.ipynb
@@ -101,11 +101,10 @@
     "train_data = poster_data[10:]\n",
     "test_data = poster_data[0:10]\n",
     "\n",
-    "\n",
     "x_train = train_data.astype('float32') / 255.\n",
     "x_test = test_data.astype('float32') / 255.\n",
     "\n",
-    "print len(train_data), len(test_data)"
+    "print \"Training Set: \" + len(train_data), len(test_data)"
    ]
   },
   {
@@ -167,7 +166,7 @@
     "    return encoded\n",
     "\n",
     "def get_decoded(encoded):\n",
-    "    # at this point the representation is (13, 13, 8)\n",
+    "    # input dim is the dimension of the encoder (13, 13, 8)\n",
     "    x = Conv2D(16, (3, 3), activation='relu', padding='same')(encoded)\n",
     "    x = UpSampling2D((2, 2))(x)\n",
     "    x = Conv2D(16, (3, 3), activation='relu', padding='same')(x)\n",
@@ -222,6 +221,7 @@
     }
    ],
    "source": [
+    "# create encoder\n",
     "encoder = Model(input_img, encoded)\n",
     "encoder.summary()"
    ]
@@ -262,6 +262,7 @@
     }
    ],
    "source": [
+    "# create decoder, by extracting latter half of the autoencoder's layers\n",
     "num_encoder_layers = len(encoder.layers)\n",
     "decoder_layers = len(autoencoder.layers)-num_encoder_layers\n",
     "\n",
@@ -318,6 +319,7 @@
     }
    ],
    "source": [
+    "# run 10 epochs of training\n",
     "autoencoder.fit(x_train, x_train,\n",
     "                epochs=10,\n",
     "                batch_size=32,\n",
@@ -327,17 +329,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# encode and decode test images\n",
     "encoded_imgs = encoder.predict(x_test)\n",
-    "decoded_imgs = autoencoder.predict(x_test)\n"
+    "decoded_imgs = autoencoder.predict(x_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -359,13 +362,15 @@
    ],
    "source": [
     "\n",
+    "# plot first 10 images and autoencoded representations\n",
+    "\n",
     "n = 10\n",
     "plt.figure(figsize=(20, 4))\n",
     "for i in range(n):\n",
+    "    \n",
     "    # display original\n",
     "    ax = plt.subplot(2, n, i+1)\n",
     "    plt.imshow(x_test[i])\n",
-    "    #plt.gray()\n",
     "    ax.get_xaxis().set_visible(False)\n",
     "    ax.get_yaxis().set_visible(False)\n",
     "\n",
@@ -379,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -400,6 +405,8 @@
     }
    ],
    "source": [
+    "# visualize encodings of the first 10 images\n",
+    "\n",
     "n = 10\n",
     "plt.figure(figsize=(8, 8))\n",
     "for i in range(n):\n",
@@ -412,29 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1, 13, 13, 16)"
-      ]
-     },
-     "execution_count": 214,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mean_poster = np.mean(encoded_imgs, axis=0)\n",
-    "mean_poster = np.array([mean_poster])\n",
-    "mean_poster.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +428,7 @@
        "(1, 100, 100, 3)"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -465,10 +450,23 @@
     }
    ],
    "source": [
+    "# take a mean encoding of the first 10 images\n",
+    "mean_poster = np.mean(encoded_imgs, axis=0)\n",
+    "mean_poster = np.array([mean_poster])\n",
+    "mean_poster.shape\n",
+    "\n",
+    "# what poster does the combined encodings make\n",
     "mean_poster_prediction = decoder.predict(mean_poster)\n",
     "plt.imshow(mean_poster_prediction[0])\n",
     "mean_poster_prediction.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
